# CITYFARM-2.0

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Docker-compose.yml  Dockerfile.node.dev  README.md  package.json  pnpm-lock.yaml  secret.py  secret.txt  turbo.json
.github/workflows/: ci.yml  deploy-vps.yml
apps/admin/: README.md  next.config.mjs  package.json  proxy.ts  tsconfig.json
apps/api/: .env.example  README.md  eslint.config.mjs  package.json  prisma.config.ts  tsconfig.json
apps/landing/: README.md  next.config.mjs  package-lock.json  package.json
apps/model-api/: .env.example  Dockerfile.dev  README.md  package.json  pyproject.toml  requirements.txt
apps/model-api/src/: asgi.py  config.py  main.py
apps/model-api/src/handlers/: chat.py  plant_health.py  space.py
apps/model-api/src/utils/: http_utils.py  image_utils.py  normalize.py
apps/model-api/tests/: test_config.py  test_main.py
apps/web/: next.config.js  package.json  postcss.config.mjs  tsconfig.json
docker/: admin.Dockerfile  api.Dockerfile  landing.Dockerfile  model-api.Dockerfile  web.Dockerfile
docs/: CITYFARM_design_schema.md  admin-app-plan.md  cityfarm.md  database-data-dictionary.md  database-erd.md  database-schema.md  database-seed.md  deploy-vps-github-actions.md  mobile-auth-client.md  system-design.md  vps-env-agent-update.md
docs/plan/: 2026-04-29-chat-tool-calling-json-implementation.md  2026-04-29-journal-task-history-tool-calling-implementation.md  (+8 more)
scripts/: check-url-regressions.mjs
temp/: OrderScreen.tsx  orders.controller.ts  orders.service.ts
(+304 files in other folders)
