[tool.poetry]
name = "model-api"
version = "0.1.0"
description = ""
authors = ["htphong0909 <htphong159951@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.3"
google-genai = "^0.3.0"
opencv-python-headless = "^4.9.0"
numpy = "^1.26.0"
pillow = "^10.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"